logs/build_log_7.txt
cargo :    Compiling cudarc v0.12.1
発生場所 行:1 文字:1
+ cargo build --lib --release 2>&1 | Out-File build_log
_7.txt -Encoding ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (   Compil 
   ing cudarc v0.12.1:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
   Compiling tracea v0.1.0 (E:\Projects\Tracea)
warning: unused imports: `PyRefMut` and `PyRef`
 --> src\interface\python.rs:6:12
  |
6 | use pyo3::{PyRef, PyRefMut};
  |            ^^^^^  ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(un
used)]`) on by default

warning: unused import: `cudarc::nvrtc::Ptx`
 --> src\interface\python.rs:9:5
  |
9 | use cudarc::nvrtc::Ptx;
  |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `std::collections::HashSet`
 --> src\semantic\mapping.rs:1:5
  |
1 | use std::collections::HashSet;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0433]: failed to resolve: use of unresolved modu
le or unlinked crate `serde_json`
  --> src\core\cache.rs:25:9
   |
25 |         serde_json::from_str(&content).unwrap_or_e
lse(|_| Self::new())
   |         ^^^^^^^^^^ use of unresolved module or unl
inked crate `serde_json`
   |
   = help: if you wanted to use a crate named `serde_js
on`, use `cargo add serde_json` to add it to your `Carg
o.toml`

error[E0433]: failed to resolve: use of unresolved modu
le or unlinked crate `serde_json`
  --> src\core\cache.rs:29:23
   |
29 |         let content = serde_json::to_string_pretty
(self).unwrap();
   |                       ^^^^^^^^^^ use of unresolved
 module or unlinked crate `serde_json`
   |
   = help: if you wanted to use a crate named `serde_js
on`, use `cargo add serde_json` to add it to your `Carg
o.toml`

warning: unused variable: `slf`
   --> src\interface\python.rs:136:22
    |
136 |     pub fn profiling(slf: &Bound<'_, Self>) -> Py
Result<PyProfilingScope> {
    |                      ^^^ help: if this is intenti
onal, prefix it with an underscore: `_slf`
    |
    = note: `#[warn(unused_variables)]` (part of `#[war
n(unused)]`) on by default

warning: unused variable: `m`
   --> src\interface\python.rs:248:5
    |
248 |     m: u32, n: u32, k: u32,
    |     ^ help: if this is intentional, prefix it wit
h an underscore: `_m`

warning: unused variable: `n`
   --> src\interface\python.rs:248:13
    |
248 |     m: u32, n: u32, k: u32,
    |             ^ help: if this is intentional, prefi
x it with an underscore: `_n`

warning: unused variable: `k`
   --> src\interface\python.rs:248:21
    |
248 |     m: u32, n: u32, k: u32,
    |                     ^ help: if this is intentiona
l, prefix it with an underscore: `_k`

warning: unused variable: `epilogue`
   --> src\interface\python.rs:249:5
    |
249 |     epilogue: PyEpilogueOp,
    |     ^^^^^^^^ help: if this is intentional, prefix
 it with an underscore: `_epilogue`

warning: unused variable: `device`
   --> src\interface\python.rs:250:5
    |
250 |     device: String
    |     ^^^^^^ help: if this is intentional, prefix i
t with an underscore: `_device`

warning: unused variable: `m`
   --> src\interface\python.rs:263:5
    |
263 |     m: u32, n: u32, k: u32,
    |     ^ help: if this is intentional, prefix it wit
h an underscore: `_m`

warning: unused variable: `n`
   --> src\interface\python.rs:263:13
    |
263 |     m: u32, n: u32, k: u32,
    |             ^ help: if this is intentional, prefi
x it with an underscore: `_n`

warning: unused variable: `k`
   --> src\interface\python.rs:263:21
    |
263 |     m: u32, n: u32, k: u32,
    |                     ^ help: if this is intentiona
l, prefix it with an underscore: `_k`

warning: unused variable: `device`
   --> src\interface\python.rs:264:5
    |
264 |     device: String
    |     ^^^^^^ help: if this is intentional, prefix i
t with an underscore: `_device`

warning: unused variable: `device`
  --> src\interface\cpp.rs:12:9
   |
12 |     let device = c_str.to_str().unwrap_or("A100").
to_string();
   |         ^^^^^^ help: if this is intentional, prefi
x it with an underscore: `_device`

warning: unused variable: `row`
  --> src\semantic\mapping.rs:20:28
   |
20 |     pub fn get_addr(&self, row: u32, col: u32) -> 
String {
   |                            ^^^ help: if this is in
tentional, prefix it with an underscore: `_row`

warning: unused variable: `col`
  --> src\semantic\mapping.rs:20:38
   |
20 |     pub fn get_addr(&self, row: u32, col: u32) -> 
String {
   |                                      ^^^ help: if 
this is intentional, prefix it with an underscore: `_co
l`

For more information about this error, try `rustc --exp
lain E0433`.
warning: `tracea` (lib) generated 16 warnings
error: could not compile `tracea` (lib) due to 2 previo
us errors; 16 warnings emitted
